✨ feat(project 2): add theme switcher to dice roller project

--- a/2-dice-roller/index.html
+++ b/2-dice-roller/index.html
@@ -10,6 +10,8 @@
     <main>
       <h1>Dice Roller</h1>
 
+      <button id="theme-switcher">Switch Theme</button>
+
       <form class="row">
         <label for="dice-number">
           <span>Number of Dices (1-10) : </span>
