🌈 style(counter-ts): improve the style

--- a/4-counter-ts/index.html
+++ b/4-counter-ts/index.html
@@ -14,7 +14,11 @@
       <a href="https://www.typescriptlang.org/" target="_blank">
         <img src="/typescript.svg" class="logo vanilla" alt="TypeScript logo" />
       </a>
-      <h1>Vite + TypeScript</h1>
+      <div>
+        <h1>Vite + TypeScript</h1>
+        <h2>Counter</h2>
+      </div>
+
       <div class="card">
         <button id="counter" type="button"></button>
 
