🦄 refactor(projects 3): rename projects 3

--- a/3a-todos-list/index.html
+++ b/3a-todos-list/index.html
@@ -28,7 +28,7 @@
             Total: <span id="total-count">0</span>, Left:
             <span id="left-count">0</span>
           </p>
-          <small id="progress-percentage">0% completed</small>
+          <small id="progress-message">0% completed</small>
           <progress value="0" max="100" id="progress-bar"></progress>
         </div>
         <div class="list">
